@@ -1,0 +1,3 @@
+It is sometimes useful to perform a computation in a separate R
+process, without affecting the current R process at all. This packages
+does exactly that.
